--- a/styles/style.css
+++ b/styles/style.css
@@ -1,1 +1,160 @@
-/* место для вашего кода */
+.header {
+width: 1100px;
+height: 293px;
+}
+
+.menu {
+    width: 391.48px;
+    height: 22px;
+    top: 133px;
+    left: 50px;
+    gap: 0px;
+    opacity: 0px;
+    color: #000;
+    font-family: Raleway;
+    font-size: 18px;
+    font-weight: 400;
+    line-height: 21.13px;
+    text-align: left;
+    text-underline-position: from-font;
+    text-decoration-skip-ink: none;  
+}
+
+.logo {
+    width: 148px;
+    height: 105px;
+    top: 92px;
+    left: 478px;
+    gap: 0px;
+    opacity: 0px;
+}
+
+.contact {
+    width: 240px;
+    height: 98px;
+    top: 95px;
+    left: 810px;
+    gap: 0px;
+    border: 1px 0px 0px 0px;
+    opacity: 0px;
+    color: #000;   
+}
+
+.cover {
+width: 1100px;
+height: 757px;
+top: 293px;
+gap: 0px;
+opacity: 0px;
+}
+
+.title {
+    width: 1000px;
+    height: 385px;
+    top: 165px;
+    left: 50px;
+    gap: 0px;
+    opacity: 0px;
+    color: #fff; 
+}
+
+.description {
+    width: 1000px;
+    height: 51px;
+    top: 656px;
+    left: 50px;
+    gap: 0px;
+    border: 1px 0px 0px 0px;
+    opacity: 0px;
+    color: #fff;
+}
+
+.overlay {
+    width: 1100px;
+    height: 757px;
+    gap: 0px;
+    opacity: 0.6px;
+    color: #000;
+}
+
+.img {
+    width: 1100px;
+    height: 757px;
+    gap: 0px;
+    opacity: 0px;     
+}
+
+.lots {
+width: 1052px;
+height: 723px;
+top: 1230px;
+left: 24px;
+gap: 0px;
+opacity: 0px;
+}
+
+.frame1,
+.frame2,
+.frame3 {
+width: 334px;
+height: 596px;
+top: 74px;
+gap: 0px;
+opacity: 0px;
+}
+.more {
+    width: 192px;
+    height: 25px;
+    top: 700px;
+    left: 40px;
+    gap: 0px;
+    border: 1px 0px 0px 0px;
+    opacity: 0px;
+    color: #000;
+}
+
+
+.about {
+    width: 1052px;
+    height: 595px;
+    top: 2073px;
+    left: 24px;
+    gap: 0px;
+    opacity: 0px;
+}
+
+.logo_column {
+    width: 240px;
+    height: 240px;
+    top: 35px;
+    left: 47px;
+    gap: 0px;
+    opacity: 0px;
+}
+
+.about_column {
+    width: 240px;
+    height: 240px;
+    top: 35px;
+    left: 47px;
+    gap: 0px;
+    opacity: 0px;
+    color: #000;
+}
+
+.footer {
+    width: 1100px;
+    height: 180px;
+    top: 2848px;
+    gap: 0px;
+    opacity: 0px;
+}
+
+.social {
+    width: Fixed (240px)px;
+    height: Hug (48px)px;
+    top: 1px;
+    left: 810px;
+    gap: 48px;
+    opacity: 0px;
+}
