--- a/styles/global.css
+++ b/styles/global.css
@@ -4,10 +4,13 @@
   box-sizing: border-box;
 }
 
+html {
+  scroll-behavior: smooth;
+}
+
 body { 
   width: 1100px;
-  height: 293px;
-  margin: 0 auto;
+  margin: 0;
   font-family: Raleway, sans-serif;
 }
 
