--- a/styles/global.css
+++ b/styles/global.css
@@ -2,15 +2,25 @@
 *::before,
 *::after {
   box-sizing: border-box;
+  margin: 0;
+  padding: 0;
 }
 
 html {
   scroll-behavior: smooth;
 }
 
-body { 
-  width: 1100px;
+body {
+  display: grid;
+  grid-template-rows: 757px 723px 595px;
+  grid-template-columns: 1100px;
   margin: 0;
+  justify-content: center;
+}
+
+main { 
+  box-sizing: border-box;
+  flex-direction: column;
   font-family: Raleway, sans-serif;
 }
 
