--- a/styles/style.css
+++ b/styles/style.css
@@ -1,14 +1,13 @@
-.body { 
-    display: flex;
-    min-height: 100vh;
+.body {
+    display: grid;
+    grid-template-columns: 757px 723px 595px;
+    grid-template-rows: 1100px;
     margin: 0;
-    box-sizing: border-box;
-    width: 1100px;
-    align-items: center;
-    }
+    justify-content: center;
+    
+}
 
 .main {
-    display: flex;
     font-weight: normal;
     margin: auto;
     font-size: 100%;
@@ -25,25 +24,40 @@
     height: 293px;
 }
 
-.main {
-    display: flex;
-}
-
-.header_menu {
-    width: 391.48px;
-    height: 22px;
+.header_menu { 
+    position: relative;
     top: 133px;
     left: 50px;
-    gap: 0px;
-    opacity: 0px;
+}
+
+.header_logo {
+    background-image: url("../images/logo-black.svg");
+    background-repeat: no-repeat;
+    background-position: center;
+    background-size: cover;
+}
+
+.header_contact {
+    font-family: Raleway;
+    font-size: 18px;
+    display: flex;
+    margin: auto;
+}
+
+.main {
+    display: grid;
+    grid-template-rows: 200px 200px 200px;
+    margin-top: 60px;
+
+}
+
+.header_menu { 
+    text-align: center;
+    width: 391.48px;
     color: #000;
     font-family: Raleway;
     font-size: 18px;
-    font-weight: 400;
-    line-height: 21.13px;
-    text-align: left;
-    text-underline-position: from-font;
-    text-decoration-skip-ink: none;  
+    text-align: center;
 }
 
 .header_logo {
@@ -66,36 +80,42 @@
     color: #000;   
 }
 
-.cover { 
-    background-image: url('/images/cover.jpg');
-    background-size: cover;
-    background-repeat: no-repeat;
-    width: 1100px;
+.cover { position: relative;
+    background-image: url("../images/cover.jpg");
+    z-index: -1;
     height: 757px;
-    top: 293px;
-    top: 293px;
-    background-image: url('C:/Users/79122/Desktop/Ekaterina_D/first-project/ono-tebe-nado-fd/images/cover.gpg')
-    background-repeat: no-reapeat;
-    background-repeat: right center;
-    background-size: 95% auto;
-    top: 293px;    
-    background-image: url('C:/Users/79122/Desktop/Ekaterina_D/first-project/ono-tebe-nado-fd/images/cover.gpg')
-    background-repeat: no-reapeat;
-    background-repeat: right center;
-    background-size: 95% auto;
+    left: 0;
+    right: 0;
+    width: 100%;
+    background-size: cover;
 }
 
-.title {
+.title { 
+    position: relative;
+    font-size: 100px;
+    font-weight: 700;
     width: 1000px;
     height: 385px;
     top: 165px;
     left: 50px;
-    gap: 0px;
-    opacity: 0px;
-    color: #fff; 
+    color: #fff;
 }
 
-.description {
+.accent-start {
+    position: relative;
+    text-align: left;
+    left: 0;
+    top: 0;
+
+}
+
+.accent-center { position: relative;
+    text-align: center;
+    left: 0;
+    top: 0;
+}
+
+.discription_text, {
     width: 1000px;
     height: 51px;
     top: 656px;
@@ -103,19 +123,28 @@
     gap: 0px;
     border: 1px 0px 0px 0px;
     opacity: 0px;
-    color: #fff;
+    color: #000000;
+}
+
+.discription_text_phone_number,
+.discription_text_mail {
+    text-decoration: underline;
 }
 
 .overlay {
-    width: 1100px;
-    height: 757px;
-    gap: 0px;
+    z-index: -1;
+    position: absolute;
+    left: 0;
+    top: 0;
+    width: 100%;
+    height: 100%;
+    background-color: rgba(0, 0, 0, 0.6);
     opacity: 0.6px;
     color: #000;
 }
 
 .lots { 
-    display: grid;
+    display: inline-grid;
     width: 1100px;
     grid-template-columns: 30% 30% 30%;
     gap: 40;
