--- a/styles/style.css
+++ b/styles/style.css
@@ -1,8 +1,9 @@
 .body {
     display: grid;
-    grid-template-columns: 757px 723px 595px;
+    grid-template-rows: 293px 2555px 180px;
     grid-template-rows: 1100px;
     margin: 0;
+    gap: 0;
     justify-content: center;
     
 }
@@ -31,6 +32,7 @@
 }
 
 .header_logo {
+    margin: auto;
     background-image: url("../images/logo-black.svg");
     background-repeat: no-repeat;
     background-position: center;
@@ -45,6 +47,8 @@
 }
 
 .main {
+    display: flex;
+    display: block;
     display: grid;
     grid-template-rows: 200px 200px 200px;
     margin-top: 60px;
@@ -82,8 +86,9 @@
 
 .cover { position: relative;
     background-image: url("../images/cover.jpg");
-    z-index: -1;
+    z-index: 1;
     height: 757px;
+    top: 0;
     left: 0;
     right: 0;
     width: 100%;
