--- a/styles/style.css
+++ b/styles/style.css
@@ -1,70 +1,51 @@
 .body {
     display: grid;
-    grid-template-rows: 293px 2555px 180px;
-    grid-template-rows: 1100px;
-    margin: 0;
-    gap: 0;
-    justify-content: center;
-    
-}
-
-.main {
-    font-weight: normal;
-    margin: auto;
-    font-size: 100%;
-    justify-content: space-between;
-    align-items: flex-start;
-    width: 1100px;
+    justify-content: center;   
 }
 
 .header {
-    display: flex;
-    justify-content: space-between;
-    align-items: flex-start;
-    width: 1100px;
-    height: 293px;
+    display: grid;
+    grid-template-columns: 478px 148px 474px;
+    align-items: center;
 }
 
-.header_menu { 
-    position: relative;
-    top: 133px;
-    left: 50px;
+.menu {     
+    font-size: 18px;
+    padding-bottom: 5px;
+    color: #000;
+    font-family: Raleway;
+    text-underline-offset: 3px;     
 }
+
+.header_menu { display: flex;
+    padding-left: 50px;
+}
+
+ul {
+    display: flex;
+    list-style-type: circle;
+    justify-content: space-between;
+}
+
+.header_menu ul {
+    gap: 32px;
+}
+
+
+.header_menu_list_active {
+    list-style-type: none;
+}
+
+.header_menu_list_about_auction {
+    padding-left: 2px;
+}
+
 
 .header_logo {
     margin: auto;
     background-image: url("../images/logo-black.svg");
     background-repeat: no-repeat;
     background-position: center;
-    background-size: cover;
-}
-
-.header_contact {
-    font-family: Raleway;
-    font-size: 18px;
-    display: flex;
-    margin: auto;
-}
-
-.main {
-    display: flex;
-    display: block;
-    display: grid;
-    grid-template-rows: 200px 200px 200px;
-    margin-top: 60px;
-
-}
-
-.header_menu { 
-    text-align: center;
-    width: 391.48px;
-    color: #000;
-    font-family: Raleway;
-    font-size: 18px;
-    text-align: center;
-}
-
-.header_logo {
     width: 148px;
     height: 105px;
     top: 92px;
@@ -73,97 +54,216 @@
     opacity: 0px;
 }
 
-.header_contact {
-    width: 240px;
+.main {
+    display: flex;
+    display: block;
+    display: grid;
+    grid-template-rows: 200px 200px 200px;
+    margin-top: 60px;
+    font-weight: normal;
+    margin: auto;
+    font-size: 100%;
+    justify-content: space-between;
+    align-items: flex-start;
+    width: 1100px;
+}
+
+.contact {
+    line-height: 1.3em;
+    font-family: Raleway;
+    font-size: 18px;
     height: 98px;
-    top: 95px;
-    left: 810px;
-    gap: 0px;
-    border: 1px 0px 0px 0px;
-    opacity: 0px;
     color: #000;   
 }
 
+.header_contact {
+    padding-left: 185px;
+}
+
+
 .cover { position: relative;
+    background-position-x: -135px;
     background-image: url("../images/cover.jpg");
     z-index: 1;
     height: 757px;
-    top: 0;
-    left: 0;
-    right: 0;
-    width: 100%;
     background-size: cover;
+    padding: 165px 0px 50px 0px;
 }
 
 .title { 
-    position: relative;
     font-size: 100px;
-    font-weight: 700;
-    width: 1000px;
+    width: 1100px;
+    padding-left: 50px;
     height: 385px;
-    top: 165px;
-    left: 50px;
     color: #fff;
+    letter-spacing: 0.3em;
 }
 
-.accent-start {
-    position: relative;
-    text-align: left;
-    left: 0;
-    top: 0;
-
-}
-
-.accent-center { position: relative;
+.aligned_text_center { display: block;
     text-align: center;
-    left: 0;
-    top: 0;
+    padding-right: 19px;
+    padding-top: 17px;
 }
 
-.discription_text, {
-    width: 1000px;
+.aligned_text_right { display: block;
+    text-align: right;
+    margin-top: 17px;
+    padding-right: 19px;
+}
+
+.discription { display: flex;
+    height: 207px;
+    padding-top: 106px;
+    font-family: Raleway;
+    color: #fff;
+    text-transform: uppercase;
+    font-size: 22px;
+    justify-content: flex-start;
+}
+
+.cover_discription_text {
+    padding-left: 50px;
+    padding-top: 14px;
+    word-spacing: 0.85em;
+}
+
+.auction_button {
     height: 51px;
-    top: 656px;
-    left: 50px;
-    gap: 0px;
-    border: 1px 0px 0px 0px;
-    opacity: 0px;
-    color: #000000;
+    width: 256px;
+    margin-left: 106px;
+    background-color: transparent;
+    border: 2px solid #fff;
+    text-transform: uppercase;    
+    color: #fff;
 }
 
 .discription_text_phone_number,
 .discription_text_mail {
     text-decoration: underline;
+    font-size: 18px;
+    padding-bottom: 5px;
+    text-underline-offset: 3px;
+}
+
+.discription_text_mail {
+    margin-top: 20px;
 }
 
 .overlay {
     z-index: -1;
     position: absolute;
-    left: 0;
     top: 0;
     width: 100%;
     height: 100%;
     background-color: rgba(0, 0, 0, 0.6);
-    opacity: 0.6px;
-    color: #000;
 }
 
 .lots { 
-    display: inline-grid;
+    display: grid;
+    padding-top: 180px;
+    grid-template-columns: repeat(3, 334px);
+    grid-template-rows: 47px 596px 25px;
+    grid-template-areas: 
+    "h2 h2 h2"
+    "frame1 frame2 frame3"
+    "blackout blackout blackout";
     width: 1100px;
-    grid-template-columns: 30% 30% 30%;
-    gap: 40;
-    grid-template-rows: auto;
+    row-gap: 28px;
+    justify-content: space-evenly;
 }
 
-.frame1,
-.frame2,
-.frame3 {
-    width: 334px;
-    height: 596px;
-    top: 74px;
-    gap: 0px;
-    opacity: 0px;
+.head_lots { text-align: left;
+    text-transform: uppercase;
+    font-size: 40px;
+    grid-column-start: 1;
+    grid-column-end: 4;
+    padding-left: 40px;
+}
+
+.primary_lots_card_content { display: flex;
+    text-align: left;
+    flex-wrap: wrap;
+    justify-content: flex-start;
+    padding: 48px 40px;
+    align-content: space-between;
+}
+
+.blackout { 
+    flex-wrap: wrap;
+    position: absolute;
+    top: 0;
+    width: 100%;
+    height: 100%;
+    z-index: -1;
+    height: 100%;
+    width: 100%;
+    background-color: rgba(0, 0, 0, 0.6);
+    justify-items: stretch;
+}
+
+.introduction_lot { 
+    color: #fff;
+    font-size: 22px;
+    text-transform: uppercase;
+    text-underline-offset: 3px;
+    text-decoration: underline;
+}
+
+.frame_text { display: flex;
+ justify-content: flex-end;
+ font-size: 20px;
+ font-weight: 400;
+ color: #fff;
+}
+
+.primary_lots_film { 
+    position: relative;
+    display: flex;
+    justify-content: flex-start;
+    background-image: url("../images/card-lot-01.jpg");
+    background-size: 175%;
+    background-position-x: -120px;
+    background-repeat: no-repeat;
+    background-position-y: 3px;
+    z-index: 1;
+    width: 100%;
+    background-size: cover;
+}
+
+.primary_lots_book { 
+    position: relative;
+    display: flex;
+    justify-content: flex-start;
+    background-image: url("../images/card-lot-02.jpg");
+    background-size: 175%;
+    background-position-x: -120px;
+    background-repeat: no-repeat;
+    background-position-y: 3px;
+    z-index: 1;
+    width: 100%;
+    background-size: cover;
+}
+
+.primary_lots_picture { 
+    position: relative;
+    display: flex;
+    justify-content: flex-start;
+    background-image: url("../images/card-lot-03.jpg");
+    background-size: 175%;
+    background-position-x: -120px;
+    background-repeat: no-repeat;
+    background-position-y: 3px;
+    z-index: 1;
+    width: 100%;
+    background-size: cover;
+}
+
+.other_lots {
+    color: #000;
+    font-family: Raleway;
+    font-size: 20px;
+    padding-bottom: 5px;
+    padding-left: 40px;
 }
 
 .more {
@@ -174,51 +274,114 @@
     gap: 0px;
     border: 1px 0px 0px 0px;
     opacity: 0px;
+    font-size: 20px;
     color: #000;
 }
 
-
-.about {
-    width: 1052px;
-    height: 595px;
-    top: 2073px;
-    left: 24px;
-    gap: 0px;
-    opacity: 0px;
+.about { 
+    display: grid;
+    padding-top: 120px;
+    grid-template-columns: 359px 693px;
+    grid-template-rows: 283px 150px 179px;
+    grid-template-areas: 
+    "logo_column header_column"
+    "logo_column column_text"
+    "logo_column column_text";
+    width: 1100px;
+    justify-content: start;
 }
 
-.logo_column {
+.logo_column { display: flex;
     width: 240px;
     height: 240px;
-    top: 35px;
-    left: 47px;
-    gap: 0px;
-    opacity: 0px;
+    margin-left: 70px;
+    margin-top: 35px;
+    
+}
+
+.image_logo { 
+    position: relative;
+    background-image: no-repeat;
+    z-index: 1;
+    background-image: url("../images/logo-black.svg");
+    filter: invert(100%);
+    width: 148px;
+    height: 114px;
+    margin: auto;
+}
+
+.black_background_image_logo {
+    position: absolute;
+    width: 240px;
+    height: 240px;
+    background-color: #000;
+    border-radius: 50%;  
 }
 
 .about_column {
+    grid-area: auto;
+    padding-left: 25px;
+    padding-top: 135px;
+}
+
+.head_column {
+    text-align: left;
+    text-transform: uppercase;
+    font-size: 40px;
+}
+
+.column_text_start {
+    margin-top: 75px;
+}
+
+.column_text_start,
+.column_text_end { display: flex;
+    position: relative;
+    font-size: 20px;
+    padding-top: 24px;
+    white-space: pre-line;
+}
+
+.footer { 
+    display: grid;
+    grid-template-columns: 468.6px 164px 468px;
+}
+
+.footer_contact {
+    padding-left: 50px;
+    padding-top: 3px;
+}
+
+.footer_menu {
+    place-self: start;
+    text-align: center;
+    padding-left: 8px;
+}
+
+.footer_menu_list_active a {
+    text-decoration: none;
+}
+
+.footer_menu ul {
+    display: flex;
+    flex-direction: column; 
+}
+
+.social ol {
+    background-image: url("../images/yt.svg");
+    position: relative;
+    width: 48px;
+    height: 48px;  
+}
+
+.footer_socials { 
+    position: relative;
+    gap: 48px;    
+} 
+
+.messenger { 
+    display: flex;
+    margin-left: 175px;
     width: 240px;
-    height: 240px;
-    top: 35px;
-    left: 47px;
-    gap: 0px;
-    opacity: 0px;
-    color: #000;
-}
-
-.footer { display: flex;
-    width: 1100px;
-    height: 180px;
-    top: 2848px;
-    gap: 0px;
-    opacity: 0px;
-}
-
-.social {
-    width: Fixed (240px)px;
-    height: Hug (48px)px;
-    top: 1px;
-    left: 810px;
     gap: 48px;
-    opacity: 0px;
 }
