--- a/styles/style.css
+++ b/styles/style.css
@@ -5,7 +5,7 @@
 
 .header {
     display: grid;
-    grid-template-columns: 478px 148px 474px;
+    grid-template-columns: 478px 148px 387px;
     align-items: center;
 }
 
@@ -31,7 +31,6 @@ ul {
     gap: 32px;
 }
 
-
 .header_menu_list_active {
     list-style-type: none;
 }
@@ -40,8 +39,8 @@ ul {
     padding-left: 2px;
 }
 
-
 .header_logo {
+    display: block;
     margin: auto;
     background-image: url("../images/logo-black.svg");
     background-repeat: no-repeat;
@@ -54,20 +53,6 @@ ul {
     opacity: 0px;
 }
 
-.main {
-    display: flex;
-    display: block;
-    display: grid;
-    grid-template-rows: 200px 200px 200px;
-    margin-top: 60px;
-    font-weight: normal;
-    margin: auto;
-    font-size: 100%;
-    justify-content: space-between;
-    align-items: flex-start;
-    width: 1100px;
-}
-
 .contact {
     line-height: 1.3em;
     font-family: Raleway;
@@ -77,24 +62,28 @@ ul {
 }
 
 .header_contact {
-    padding-left: 185px;
+    justify-self: end;
+    max-width: 240px;
 }
 
-
-.cover { position: relative;
+.cover { 
+    display: flex;
+    position: relative;
     background-position-x: -135px;
     background-image: url("../images/cover.jpg");
     z-index: 1;
     height: 757px;
     background-size: cover;
-    padding: 165px 0px 50px 0px;
+    flex-direction: column;
 }
 
-.title { 
+.title { display: flex;
+    position: absolute;
+    flex-direction: column;
     font-size: 100px;
     width: 1100px;
     padding-left: 50px;
-    height: 385px;
+    padding-top: 165px;
     color: #fff;
     letter-spacing: 0.3em;
 }
@@ -111,17 +100,20 @@ ul {
     padding-right: 19px;
 }
 
-.discription { display: flex;
+.description { display: flex;
     height: 207px;
-    padding-top: 106px;
     font-family: Raleway;
     color: #fff;
     text-transform: uppercase;
     font-size: 22px;
-    justify-content: flex-start;
+    padding-top: 656px;
 }
 
-.cover_discription_text {
+.description_text {
+    font-style: normal;
+}
+
+.cover_description_text {
     padding-left: 50px;
     padding-top: 14px;
     word-spacing: 0.85em;
@@ -137,21 +129,22 @@ ul {
     color: #fff;
 }
 
-.discription_text_phone_number,
-.discription_text_mail {
+.description_text_phone_number,
+.description_text_mail {
     text-decoration: underline;
     font-size: 18px;
     padding-bottom: 5px;
     text-underline-offset: 3px;
 }
 
-.discription_text_mail {
+.description_text_mail {
     margin-top: 20px;
 }
 
 .overlay {
     z-index: -1;
     position: absolute;
+    background-size: cover;
     top: 0;
     width: 100%;
     height: 100%;
@@ -160,19 +153,19 @@ ul {
 
 .lots { 
     display: grid;
+    position: relative;
+    margin-left: 24px;
     padding-top: 180px;
-    grid-template-columns: repeat(3, 334px);
-    grid-template-rows: 47px 596px 25px;
+    grid-template-columns: 1052px;
+    grid-template-rows: 47px 596px;
     grid-template-areas: 
-    "h2 h2 h2"
-    "frame1 frame2 frame3"
-    "blackout blackout blackout";
-    width: 1100px;
-    row-gap: 28px;
-    justify-content: space-evenly;
+    "h2"
+    "lots_card-list-item";
+    gap: 28px;
+    margin-bottom: 30px;
 }
 
-.head_lots { text-align: left;
+.lots_heading { text-align: left;
     text-transform: uppercase;
     font-size: 40px;
     grid-column-start: 1;
@@ -180,7 +173,8 @@ ul {
     padding-left: 40px;
 }
 
-.primary_lots_card_content { display: flex;
+.primary_lots_card_content { 
+    display: flex;
     text-align: left;
     flex-wrap: wrap;
     justify-content: flex-start;
@@ -188,17 +182,15 @@ ul {
     align-content: space-between;
 }
 
-.blackout { 
-    flex-wrap: wrap;
-    position: absolute;
-    top: 0;
-    width: 100%;
-    height: 100%;
-    z-index: -1;
-    height: 100%;
-    width: 100%;
-    background-color: rgba(0, 0, 0, 0.6);
-    justify-items: stretch;
+.lots_card-list-item {
+    display: flex;
+    gap: 25px;
+    flex-direction: row; 
+}
+
+.lots_card-list-item ol {
+    width: 334px;
+    height: 596px;
 }
 
 .introduction_lot { 
@@ -216,11 +208,9 @@ ul {
  color: #fff;
 }
 
-.primary_lots_film { 
-    position: relative;
+.card {
     display: flex;
-    justify-content: flex-start;
-    background-image: url("../images/card-lot-01.jpg");
+    position: relative;
     background-size: 175%;
     background-position-x: -120px;
     background-repeat: no-repeat;
@@ -228,42 +218,27 @@ ul {
     z-index: 1;
     width: 100%;
     background-size: cover;
+}
+
+.primary_lots_film { 
+    background-image: url("../images/card-lot-01.jpg");
 }
 
 .primary_lots_book { 
-    position: relative;
-    display: flex;
-    justify-content: flex-start;
     background-image: url("../images/card-lot-02.jpg");
-    background-size: 175%;
-    background-position-x: -120px;
-    background-repeat: no-repeat;
-    background-position-y: 3px;
-    z-index: 1;
-    width: 100%;
-    background-size: cover;
 }
 
 .primary_lots_picture { 
-    position: relative;
-    display: flex;
-    justify-content: flex-start;
     background-image: url("../images/card-lot-03.jpg");
-    background-size: 175%;
-    background-position-x: -120px;
-    background-repeat: no-repeat;
-    background-position-y: 3px;
-    z-index: 1;
-    width: 100%;
-    background-size: cover;
 }
 
 .other_lots {
+    display: flex;
     color: #000;
     font-family: Raleway;
     font-size: 20px;
-    padding-bottom: 5px;
-    padding-left: 40px;
+    text-underline-offset: 3px;
+    padding-left: 64px;
 }
 
 .more {
@@ -356,15 +331,17 @@ ul {
     place-self: start;
     text-align: center;
     padding-left: 8px;
+     
 }
 
 .footer_menu_list_active a {
     text-decoration: none;
 }
 
-.footer_menu ul {
+.footer_menu ol {
     display: flex;
-    flex-direction: column; 
+    flex-direction: column;
+    list-style-type: none;
 }
 
 .social ol {
@@ -384,4 +361,5 @@ ul {
     margin-left: 175px;
     width: 240px;
     gap: 48px;
+    list-style-type: none;
 }
