--- a/styles/global.css
+++ b/styles/global.css
@@ -12,17 +12,20 @@ html {
 
 body {
   display: grid;
-  grid-template-rows: 293px 2555px 180px;
   grid-template-columns: 1100px;
   margin: 0;
   place-content: center;
+  font-family: Raleway, sans-serif;
 }
 
 main {
   width: 1100px;
-  height: 1023px;
   flex-direction: column;
-  font-family: Raleway, sans-serif; /* стиль из global.css*/ 
+  font-family: Raleway, sans-serif;
+}
+
+address {
+  font-style: normal;
 }
 
 h1,
@@ -42,6 +45,7 @@ blockquote {
 
 a {
   color: inherit;
+  font-style: normal;
 }
 
 img {
