--- a/styles/style.css
+++ b/styles/style.css
@@ -7,9 +7,9 @@
   display: grid;
   width: 1100px;
   grid-template-columns: 428px 148px 387px;
-  margin-top: 90px;
+  margin-top: 92px;
   margin-left: 50px;
-  margin-bottom: 98px;
+  margin-bottom: 96px;
   align-items: center;
 }
 
@@ -37,7 +37,7 @@
   margin: 0;
 }
 
-.header_logo {
+.logo {
   display: block;
   margin: auto;
   background-image: url("../images/logo-black.svg");
@@ -64,7 +64,7 @@
   position: relative;
   width: 1100px;
   margin: auto;
-  background-position-x: auto;
+  background-position: center;
   background-image: url("../images/cover.jpg");
   z-index: 1;
   min-height: 757px;
@@ -128,7 +128,7 @@
   text-underline-offset: 3px;
 }
 
-.description_text address {
+.address {
   margin-top: 20px;
   text-decoration: none;
 }
@@ -136,6 +136,7 @@
 .overlay {
   z-index: -1;
   position: absolute;
+  inset: 0;
   background-size: cover;
   width: 100%;
   height: 100%;
@@ -152,7 +153,7 @@
     "h2"
     "lots_card-list-item"
     "other_lots";
-  gap: 28px;
+  gap: 27px;
 }
 
 .lots_heading {
@@ -202,10 +203,10 @@
   display: flex;
   position: relative;
   min-height: 596px;
-  background-position-x: -120px;
+  min-width: 334px;
+  background-position: center;
   background-repeat: no-repeat;
   z-index: 1;
-  width: 100%;
   background-size: cover;
 }
 
@@ -255,16 +256,8 @@
   border-radius: 50%;
 }
 
-.image_logo {
-  position: relative;
-  background-image: no-repeat;
-  z-index: 1;
-  background-image: url("../images/logo-black.svg");
-  filter: invert(100%);
-  height: 114px;
-  margin: auto;
-  background-position: center;
-  width: 148px;
+.other {
+  filter: invert(100%); /*изменен класс для лого*/
   height: 114px;
 }
 
@@ -278,19 +271,15 @@
   text-align: left;
   text-transform: uppercase;
   font-size: 40px;
+  margin-bottom: 100px;
 }
 
-.column_text_start {
-  margin-top: 75px;
-}
-
-.column_text_start,
-.column_text_end {
+.column_text {
   display: flex;
   position: relative;
   font-size: 20px;
-  padding-top: 24px;
   white-space: pre-line;
+  gap: 24px;
 }
 
 .footer {
@@ -299,9 +288,10 @@
     "footer_contact"
     "footer_menu"
     "messenger";
-  margin-top: 182px;
+  margin-top: 180px;
   margin-right: 50px;
   margin-left: 50px;
+  margin-bottom: 82px; /*добавлен отступ*/
   width: 1000px;
   grid-template-columns: 1fr 164px 1fr;
   align-items: start;
@@ -320,19 +310,13 @@
   flex-direction: column;
 }
 
-.footer_link_active {
+.link_active {
   justify-content: center;
   text-align: center;
 }
 
 .footer_menu {
   justify-content: center;
-}
-
-.social ol {
-  position: relative;
-  width: 48px;
-  height: 48px;
 }
 
 .footer_socials {
