--- a/styles/style.css
+++ b/styles/style.css
@@ -5,7 +5,7 @@
 
 .header {
   display: grid;
-  width: 1100px;
+  max-width: 1100px; /*overflow-x: hidden;*/
   grid-template-columns: 428px 148px 387px;
   margin-top: 92px;
   margin-left: 50px;
@@ -146,6 +146,7 @@
 .lots {
   display: grid;
   position: relative;
+  max-width: 1100px; /*overflow-x: hidden;*/
   margin-left: 25px;
   margin-top: 180px;
   grid-template-columns: 1052px;
@@ -153,7 +154,6 @@
     "h2"
     "lots_card-list-item"
     "other_lots";
-  gap: 27px;
 }
 
 .lots_heading {
@@ -163,6 +163,7 @@
   grid-column-start: 1;
   grid-column-end: 4;
   padding-left: 40px;
+  padding-bottom: 27px;
 }
 
 .primary_lots_card_content {
@@ -174,12 +175,13 @@
   align-content: space-between;
 }
 
-.lots_card-list-item {
+.lots_card-list {
   display: flex;
-  flex-direction: row;
+  flex-flow: row wrap;
   justify-content: flex-start;
   gap: 25px;
   flex-grow: 1;
+  margin-bottom: 27px;
 }
 
 .introduction_lot {
@@ -203,7 +205,7 @@
   display: flex;
   position: relative;
   min-height: 596px;
-  min-width: 334px;
+  max-width: 334px;
   background-position: center;
   background-repeat: no-repeat;
   z-index: 1;
@@ -276,10 +278,15 @@
 
 .column_text {
   display: flex;
+  flex-direction: column;
   position: relative;
   font-size: 20px;
   white-space: pre-line;
-  gap: 24px;
+  gap: 24px; 
+}
+
+.column_text:first-child {
+  column-gap: 24px;
 }
 
 .footer {
